// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utility functions extractArchive extracts all files 1`] = `
{
  "a.txt": "",
  "b.txt": "",
  "c.txt": "",
}
`;

exports[`Utility functions extractArchive extracts selected files 1`] = `
{
  "a.txt": "",
}
`;

exports[`Utility functions parseBooksXML gets values and sets defaults 1`] = `
{
  "booksRoot": "/collections",
  "mediaRoot": "/media",
  "pagesRoot": "/modules",
  "privateRoot": "/private",
  "publicRoot": "test",
}
`;
